==> cyber-murmel/micropython/ports/rtl8762c/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/mphal.h"
#include "mphalport.h"
#include "modmachine.h"
#include "peripheral/rtl876x_rcc.h"
#include "peripheral/rtl876x_pinmux.h"
#include "peripheral/rtl876x_gpio.h"
#include "peripheral/rtl876x_nvic.h"
#define IRQn_hlp(PAD) GPIO##PAD##_IRQn
#define IRQn(PAD) IRQn_hlp(PAD)

void machine_pins_init(void) {
    RCC_PeriphClockCmd(APBPeriph_GPIO, APBPeriph_GPIO_CLOCK, ENABLE);
}

void machine_pins_deinit(void) {
    RCC_PeriphClockCmd(APBPeriph_GPIO, APBPeriph_GPIO_CLOCK, DISABLE);

}

STATIC mp_obj_t machine_pin_obj_init_helper(machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_mode, ARG_pull, ARG_sw_mode, ARG_value };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode, MP_ARG_INT, {.u_int = PAD_OUT_DISABLE}},
        { MP_QSTR_pull, MP_ARG_INT, {.u_int = PAD_PULL_NONE}},
        { MP_QSTR_sw_mode, MP_ARG_BOOL, {.u_bool = false}},
        { MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_BOOL, {.u_bool = false}},
    };

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    self->sw_mode = args[ARG_sw_mode].u_bool;

    // configure the pin for gpio, and pull
    PAD_Mode pad_mode = args[ARG_sw_mode].u_bool
        ? PAD_SW_MODE
        : PAD_PINMUX_MODE;
    PAD_Pull_Mode pull_mode = args[ARG_pull].u_int;
    PAD_OUTPUT_ENABLE_Mode output_enable = args[ARG_mode].u_int;
    PAD_OUTPUT_VAL sw_mode_val = args[ARG_value].u_bool
        ? PAD_OUT_HIGH
        : PAD_OUT_LOW;

    Pad_Config(self->id, pad_mode, PAD_IS_PWRON, pull_mode, output_enable, sw_mode_val);

    // configure mode
    if (!self->sw_mode) {
        uint32_t gpioBit = GPIO_GetPin(self->id);
        GPIOMode_TypeDef direction = (PAD_OUT_DISABLE == output_enable) ? GPIO_Mode_IN : GPIO_Mode_OUT;

        GPIO_InitTypeDef GPIO_InitStruct;
        GPIO_StructInit(&GPIO_InitStruct);
        GPIO_InitStruct.GPIO_Pin = gpioBit;
        GPIO_InitStruct.GPIO_Mode = direction;
        GPIO_Init(&GPIO_InitStruct);
        GPIO_WriteBit(gpioBit, args[ARG_value].u_bool);
        Pinmux_Config(self->id, DWGPIO);
    }

    return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    const machine_pin_obj_t *self = self_in;
    uint32_t gpioBit = GPIO_GetPin(self->id);
    if (n_args == 0) {
        // get pin
        if (self->sw_mode) {
            mp_raise_ValueError(MP_ERROR_TEXT("can't read SW pin"));
        }
        else {
            return MP_OBJ_NEW_SMALL_INT(GPIO_ReadInputDataBit(gpioBit));
        }
    } else {
        // set pin
        if (self->sw_mode) {
            Pad_OutputControlValue(self->id, mp_obj_is_true(args[0]));
        }
        else {
            GPIO_WriteBit(gpioBit, mp_obj_is_true(args[0]));
        }
    }
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_off(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    uint32_t gpioBit = GPIO_GetPin(self->id);
    GPIO_WriteBit(gpioBit, 0);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_on(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    uint32_t gpioBit = GPIO_GetPin(self->id);
    GPIO_WriteBit(gpioBit, 1);
    return mp_const_none;
}
